--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     #tbs-iframe{ width:100%; max-width:100%; border:0; display:block; background:transparent; }
   </style>
 
-  <iframe id="tbs-iframe" title="TBS FX収益シミュレーター" scrolling="no"></iframe>
+  <iframe id="tbs-iframe" title="ARBI TRADE 収益シミュレーター" scrolling="no"></iframe>
 
   <script>
     (function(){
@@ -21,7 +21,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
-<title>TBS FX収益シミュレーター</title>
+<title>ARBI TRADE 収益シミュレーター</title>
 <style>
   :root{
     --bg:#fff; --text:#0f172a; --muted:#64748b; --card:#fff; --line:#e2e8f0; --kpi:#fafafa;
