--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 </head>
 <body>
   <div id="fxsim">
-    <h1>TOM BOSH SYSTEM｜収益シミュレーター（複利計算）</h1>
+    <h1>ARBI TRADE｜収益シミュレーター（複利計算）</h1>
 
     <div class="grid">
       <!-- パラメーター -->
