--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
           <div class="opt-grid">
             <div class="opt-row">
               <input id="modePrincipal" type="checkbox">
-              <label for="modePrincipal" style="margin:0;">元本回収モード（<strong>初回のみ</strong>：初期証拠金×2 回収達成後に一度だけ初期証拠金へリセット）</label>
+              <label for="modePrincipal" style="margin:0;">元本回収モード（<strong>初期証拠金×2 回収後に初期証拠金へリセット</strong>）</label>
             </div>
             <div class="opt-row">
               <input id="autoRecalc" type="checkbox"><label for="autoRecalc" style="margin:0;">自動再計算</label>
